# Str2D

./: .buildinfo  .gitignore  .pylintrc  LICENSE.txt  README.md  README.rst  README.txt  TODO.md  about.html  genindex.html  includeme.html  index.html  modules.html  motivation.html  objects.inv  purpose.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  str2d.html
.doctrees/: about.doctree  environment.pickle  index.doctree  motivation.doctree  str2d.doctree
.doctrees/_str2d/: str2d.Box.doctree  str2d.BoxParts.doctree  str2d.BoxStyle.doctree  str2d.Str2D.doctree  str2d.doctree
.github/workflows/: publish-pypi-pages.yml  publish-to-test-pypi.yml
_modules/: functools.html  index.html  str2d.html
_modules/str2d/: str2d.html  utils.html
_sources/: about.rst.txt  index.rst.txt  modules.rst.txt  motivation.rst.txt  purpose.rst.txt
_sources/_str2d/: str2d.Str2D.rst.txt  str2d.rst.txt
_static/: custom.css
_str2d/: str2d.Box.html  str2d.BoxParts.html  str2d.BoxStyle.html  str2d.Str2D.html  str2d.html
docs/: Makefile
mask/: mask.py
masking/: __init__.py  mask.py  perforation.py  stencil.py
modules/: str2d.html  utils.html
stencil/: Mask_Design_API_and_UseCases_questions_and_remarks  __init__.py  mask.py  stencil.py
str2d/: __init__.py  str2d.py  utils.py
tests/: test_str2d.py  test_utils.py
tests_mask/: __init__.py
tests_stencils/: __init__.py  test_mask.py  test_perforation.py  test_stencil.py
tests_str2D/: test_str2d.py  test_utils.py
z_research/: grid_transforms_steps  subtests.txt  vocab
(+13 files in other folders)
